log
Fri Mar 18 00:31:31 UTC 2022: 
 tests:  0|6
total_score: 0/70
bac1a11
Fri Mar 18 00:32:38 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:37: error: ‘Lista’ undeclared (first use in this function); did you mean ‘List’?
   List * l = (List*) malloc (sizeof(Lista));
                                     ^~~~~
                                     List
list.c:32:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9e2db33
